staticresources/scss/partials/_general.scss
@use "sass:map";
:root{
  // --lwc-varLineHeightText: normal;
}

//Global Styles
*{box-sizing: border-box;}

// body{font-family: $bffamily; font-size: $bfsize; color: $bfcolor;
// -webkit-font-smoothing: antialiased; /* Chrome, Safari */
// -moz-osx-font-smoothing: grayscale; /* Firefox */
// }

.bfcolor{color:$bfcolor;}

// text class [Start]
.text-link{color:$link-color; text-decoration: $link-decoration;
  &:hover{color: $link-hover-color; text-decoration: $link-hover-decoration;}
}

.text-link-all, .text-link-all a{color:$link-color !important; text-decoration: $link-decoration !important;
  &:hover{color: $link-hover-color !important; text-decoration: $link-hover-decoration !important;}
}

.text-decoration{
  &-none{text-decoration: none !important;}
  &-underline{text-decoration: underline !important;}
}
.text-transform{
  &-normal{text-transform: none !important;}
  &-uppercase{text-transform:uppercase !important ;}
  &-lowercase{text-transform: lowercase !important;}
  &-capitalize{text-transform: capitalize !important;}
}

// Short Classes
.tmpnone {
display: none;
}

// for checking HTML structure on browser
.outline {
outline: 1px red dotted;
}

.outline2 {
outline: 1px blue solid;
}

.outline-all,
.outline-all * {
outline: 1px cyan dashed;
}

.float-center {
float: none !important;
display: table !important;
margin: 0 auto !important;
}

.position-relative{position: relative;}
.position-absolute{position: absolute;}
.position-sticky{position: sticky; top: 0; z-index: 5;}

.overflow-hidden{overflow: hidden;}
.overflow-visible{overflow: visible;}
.overflow-auto{overflow: auto;}
.overflow-visible-x{overflow-x: visible;}
.overflow-visible-y{overflow-y: visible;}
.overflow-hidden-x{overflow-x: hidden;}
.overflow-hidden-y{overflow-y: hidden;}

.wh-auto {
width: auto !important;
height: auto !important;
}
.wh-100 {
width: 100% !important;
height: 100% !important;
}
.w-100{width: 100%;}
.h-100{height: 100%;}
.w-55{width: 55%;
  @include mq(0, $mq-medium){
    width: 100%;
  }
}
.w-100vh{width: 100vh;}
.h-100vh{height: 100vh;}
.wh-100vh{@extend .w-100vh; @extend .h-100vh;}

.min-w-100vw{min-width: 100vw;}
.max-w-100vw{max-width: 100vw;}

.min-h-100vw{min-height: 100vw;}
.max-h-100vw{max-height: 100vw;}

.m-auto{margin: auto;}
.border-none{border:none !important;}

.word-break-all{word-break: break-all;}

.whitespace-normal{white-space: normal;}
.whitespace-nowrap{white-space: nowrap;}
.whitespace-break-spaces{white-space: break-spaces;}

.img-responsive{max-width: 100%;}

//Background Image Classes
.nobg {
background: unset !important;
}
// both image and color will be unset

.bgCover,
.bgNoRepeat,
.bgContain {
background-repeat: no-repeat !important;
}
.bg-repeat{background: repeat;}
.bg-repeat-x{
background-repeat: repeat-x;
}
.bg-repeat-y{
background-repeat: repeat-y;
}
.bgCover {
background-size: cover !important;
}
.bgContain {
background-size: contain !important;
}
.bgfixed {
background-attachment: fixed !important;
}
.bgscroll {
background-attachment: scroll !important;
}
.bgPosCenter {
background-position: center center !important;
}
.bgPosTopLeft {
background-position: top left !important;
}
.bgPosTopCenter {
background-position: top center !important;
}
.bgPosTopRight {
background-position: top right !important;
}
.bgPosBtmLeft {
background-position: bottom left !important;
}
.bgPosBtmCenter {
background-position: bottom center !important;
}
.bgPosBtmRight {
background-position: bottom right !important;
}
.bgPosLeftCenter {
background-position: left center !important;
}
.bgPosRightCenter {
background-position: right center !important;
}



//Gradients
.bg-graddient-1 {
background: linear-gradient(232deg, #3EDDBF 16.85%, #2955B7 60.71%, #2641B6 71.17%, #2331B5 88.85%)
}

// filter color
.filter-white{
// #ffffff
filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(356deg) brightness(104%) contrast(101%);
}
.filter-primary-100{
// #71AD35
filter: invert(63%) sepia(35%) saturate(810%) hue-rotate(47deg) brightness(92%) contrast(82%);
}
.filter-primary-200{
// #008236
filter: invert(36%) sepia(79%) saturate(2203%) hue-rotate(63deg) brightness(94%) contrast(89%);
}
.filter-secondary-100{
// #3eddbf
filter: invert(70%) sepia(57%) saturate(456%) hue-rotate(117deg) brightness(95%) contrast(93%);
}

.filter-grey-300{
  filter: invert(93%) sepia(3%) saturate(121%) hue-rotate(335deg) brightness(95%) contrast(92%);
}

.filter-grey-750{
// #424242
filter: invert(23%) sepia(82%) saturate(0%) hue-rotate(181deg) brightness(89%) contrast(93%);
}
.filter-grey-600{
// #868686
filter: invert(55%) sepia(0%) saturate(0%) hue-rotate(165deg) brightness(96%) contrast(89%);
}

.filter-danger-100{
// #E14526
  filter: invert(33%) sepia(28%) saturate(6293%) hue-rotate(351deg) brightness(94%) contrast(86%);
}



// transition
.trans-2,
.trans-2all,
.trans-2all * {
transition: all 0.2s ease-in-out;
}

.trans-3,
.trans-3all,
.trans-3all * {
transition: all 0.3s ease-in-out;
}

.trans-4,
.trans-4all,
.trans-4all * {
transition: all 0.4s ease-in-out;
}

.trans-6,
.trans-6all,
.trans-6all * {
transition: all 0.6s ease-in-out;
}

.trans-8,
.trans-8all,
.trans-8all * {
transition: all 0.8s ease-in-out;
}

// .trans-10,
// .trans-10all,
// .trans-10all * {
// transition: all 0.10s ease-in-out;
// }

// .trans-12,
// .trans-12all,
// .trans-12all * {
// transition: all 0.12s ease-in-out;
// }

// .trans-14,
// .trans-14all,
// .trans-14all * {
// transition: all 0.14s ease-in-out;
// }

// .trans-16,
// .trans-16all,
// .trans-16all * {
// transition: all 0.16s ease-in-out;
// }

// .trans-18,
// .trans-18all,
// .trans-18all * {
// transition: all 0.18s ease-in-out;
// }

// .trans-20,
// .trans-20all,
// .trans-20all * {
// transition: all 0.20s ease-in-out;
// }

// .trans-22,
// .trans-22all,
// .trans-22all * {
// transition: all 0.22s ease-in-out;
// }

// Extends
// icon before/after content
%iconContent { 
  content: ''; @include square(toRem(16)); background: currentColor;  display: inline-block; -webkit-mask-size: cover; mask-size: cover; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center center; mask-position: center center;
}

%pageheader{
      background-color: $gray-100;
      padding: toRem(16);
      justify-content: space-between;
      flex-direction: row-reverse;
      margin: 0;
      min-height: toRem(52);
}


/* Misc */
input::-ms-reveal,
input::-ms-clear {
  display: none;
}
.cursor-pointer{cursor: pointer;}
.cursor-disabled{cursor: not-allowed;}
.cursor-default{cursor: default;}
.prevent-default{pointer-events: none;}
.no-drop-shadow{box-shadow: none;}
.no-resize{resize: none;}

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

// Salesforce site loader Modifer [Start]
// .siteforceSpinnerManager{position: relative;
//   &::before{content: ''; @include square(100%); background:url('./../images/clearwater-loader.svg')  no-repeat center center rgba(255,255,255,0.9); backdrop-filter: blur(5px); position: fixed; left: 50%; top: 50%; z-index: 9999; transform: translate(-50%, -50%); display: block;}
//   .siteforceLoadingBalls{opacity: 0;}
// }

// .slds-spinner_container{background:blue}
// Salesforce site loader Modifer [END]

// Salesforce fix [END]

// Icons class
.amr-icon {
  line-height: 1;
  display: inline-block;
  vertical-align: middle;
  &:before {
      content: "";
      background-color: currentColor;
      @include square(1em);
      mask: no-repeat center center;
      mask-size: contain;
      -webkit-mask: no-repeat center center;
      -webkit-mask-size: contain;
      display: block;
  }

  &.icon-icoMic:before{height: toRem(26);}
}
.slds-input__icon{
  .amr-icon{transform: translateY(toRem(-5));}
}
// Icon [END]


// flexable Grid
.flexableGrid{
  $gap: toRem(12);
  display: flex; gap: $gap; flex-wrap: wrap;
  .childItem,
  .whiteBox{margin-bottom:0 !important;
    @media only screen and (min-width: $mq-large){
      flex: 1 1 calc(100vw - (50vw + toRem(314)));
      min-width: calc(100vw - 70vw);
    }
    @include mq(0, $mq-large){
      flex: 1 1 100%;
      max-width: 100%;
    }
  }

  // single Column
  &.singleColumn{
    .whiteBox{
      @media only screen and (min-width: $mq-large){
        max-width: calc(50% - ($gap/2));
      }
    }
  }
}

// css scrollbar [Start]
// ::-webkit-scrollbar-track
// {
// 	-webkit-box-shadow: inset 0 0 toRem(6) rgba($black,.15);
// 	border-radius: toRem(10);
// 	background-color: #F5F5F5;
// }

// ::-webkit-scrollbar
// {
// 	width: toRem(6);
//   height: toRem(6);
// 	background-color: #F5F5F5;
// }

// ::-webkit-scrollbar-thumb
// {
// 	border-radius: toRem(10);
// 	-webkit-box-shadow: inset 0 0 toRem(6) rgba($black,.15);
// 	background-color: map.get($bt-primary, 100);
// }
// css scrollbar [END]

.align-items-stretch{
  align-items: stretch;
}

.row-gap-24px{
  row-gap: toRem(24);
}

.row-gap-16px{
  row-gap: toRem(16);
}

.box-shadow{
  box-shadow: 0 toRem(4) toRem(22) 0 #07121A;
}

.scaleX-flip{
  transform: scaleX(-100%);
}

.table-layout-fixed{
  table-layout: fixed;
}


// Misc
.preload-img {width: 1px; height: 1px; opacity: 0; position: absolute; pointer-events: none;}

// General Content Styling [Start]
.generalContent{
  h1, h2, h3, h4, h5, h6{font-weight: $font-weight-semibold;}
  p{line-height: 140%;}
  ul{padding-left: toRem(20); margin-top: toRem(10);
    li { position: relative; list-style:  none;
      &::before{
        content:''; background: $secondary; @include square(toRem(6), 50%); position: absolute; left: toRem(-20); top: toRem(10); z-index: 1;
      }
    }
    ul {
      padding-left: toRem(20);
      margin: toRem(10) 0;
    }
  }
}
// General Content Styling [END]

// Nasa CRM
.nasaCRM {
  .slds-template_default{background-color: $gray-300; height: auto; min-height: 100vh;}
  
  .highlights {
    .slds-button{color:$secondary; border-color: $gray-300;}
    .slds-page-header__detail-block{
      p:nth-child(2){font-weight: $font-weight-bold;}
    }
  }
}

.nasaAppWrapper{
  .slds-box {
    @extend .border-gray-300;

    &.border-none{
      border: none !important;
    }
  }

  @media screen and (min-width: 1900px) {
    .mainSectionLeft{
      width: calc(60vw - 21px) !important;
    }
    .mainSectionRight{
      width: calc(40vw - 21px) !important;
    }
  }

  > .slds-card > .slds-card__body{
    margin-top: 0
  }
  .slds-text-link {
    @extend .text-link;
  }
}

.list-style {
  ul {
    padding-left: toRem(45);
    margin-top: toRem(4);

    li {
      position: relative;
      list-style: none;
      padding-bottom: toRem(3);

      &::before {
        content: '';
        background: $gray-600;
        @include square(toRem(6), 50%);
        position: absolute;
        left: toRem(-20);
        top: toRem(6);
        z-index: 1;
      }
    }

    ul {
      padding-left: toRem(20);
      margin: toRem(10) 0;
    }
  }
}

// DC Container Fix
.dcContainerCol {
  .whiteBarAccordance {
     &.slds-p-left--small {
       padding-left: toRem(0) !important;    
     }
  }

  .industry-badge {
    border-radius: toRem(5);
    background-color: $warning2;
    color: $black;
  }

  .customInfo {
    align-items: center;
  }

  .price-box {
    border: 1px solid map.get($bt-primary, 300);
    padding: toRem(20) toRem(20); 
  }

  .bdr-15 {
    border-radius: toRem(15);
  }

  .summaryTextarea {
    .slds-textarea {
      min-height: toRem(240);
      border: 1px solid map.get($bt-primary, 300);
      border-radius: toRem(5);
      background:$gray-100;
    }
  }
}

// DC Container Fix [END]

